# active_monkey

./: .gitignore  AGENTS.md  CLAUDE.md  DIRECTIONS.md  EXPERIMENTS.md  FROZEN  MISSION.md  README.md  REPORT.md  RESEARCH.md  RESUME.md  am-live.js  am-shared.jsx  am.css  converse.py  converse_demo.py  experiments-data.js  index.html  journey.html  lab-status.js  math-data.js  math.html  open_problem.html  policy.md  pyproject.toml  run_affect_loop.py  run_life.py  run_loop.py  run_pr_loop.py  sense-evolution.html  talk.py
.codex/: hooks.json
active_loop/: affect_agent.py  affect_pr_loop.py  affect_score_fast.py  affect_score_json_fast.py  affect_spec.py  alphabet.py  artifacts.py  checkpoint.py  continuous.py  controller.py  creature.py  creature_continuous.py  critic.py  experiments_parser.py  frozen_guard.py  git_ops.py  growth.py  hybrid.py  lang_model.py  lang_model_spec.py  loop.py  meta_metrics.py  model_spec.py  n3_diagnostics.py  oracle.py  pcc.py  pr_loop.py  proposer.py  report_html.py  signals.py  site_data.py  state.py  structure.py  task_env.py  verdict.py  worker.py  world_model.py  worlds.py
artifacts/: README.md
assets/: make_logo.py
boundary_notes/: active-sensing-benefit-wall-v0.json  costly-sensing-wall-v0.json  disembodied-stream-collapse-v0.json  hidden-state-memory-boundary-v0.json  identity-ecological-boundaries-v0.json  identity-n4-commitment-v0.json  local-gradient-wall-locomotion-v0.json  self-other-substrate-legibility-wall-v0.json
creature/: README.md
data/: corpus.txt
docs/: ARCHITECTURE.md  ARTIFACTS.md  ARTIFACT_SPEC.md  BELIEFS_AND_COMMUNICATION.md  CLAIMS.md  COALESCENCE_PLAN.md  EXPERIMENT_BACKFILL.md  EXPERIMENT_INDEX.md  GLOSSARY.md  MECHANISM_LIBRARY.md  RELATED_WORK.md  REPRODUCIBILITY.md  ROADMAP.md  evolvability_preflight.md
ecology/: README.md  RUNTIME.md  __init__.py  acoustic.py  batch.py  continuous_world.py  creature.py  engine.py  genotype.py  patchmosaic.py  recording.py  run.py  runtime.py  runtime_budget.py  scenarios.py  sense_axis.py  wellmixed.py  world.py
embodied/: README.md  __init__.py  batched_population.py  batched_world.py  creature.py  demo.py  env.py  foodfield.py  life_mechanics.py  policy_runner.py  population.py  render.py  rollout.py  run_batched.py  run_population.py  sweep_phase2p5.py  train.py  world.py
eval/: affect_score.py  affect_score_json.py  lang_score.py  lang_score_json.py  score.py  score_json.py  suite.py
experiments/: README.md  _pilot10_precision.py  _pilot9_forage.py  exp100_vela_epoch4.py  exp101_mirro_epoch5.py  exp102_decade_audit.py  exp103_vela_epoch5.py  exp104_mirro_epoch6.py  exp105_vela_epoch6.py  exp106_mirro_epoch7.py  exp107_vela_epoch7.py  exp108_mirro_epoch8.py  exp109_vela_epoch8.py  exp110_mirro_epoch9.py  exp111_vela_epoch9.py  exp112_deep_sigma.py  exp113_mirro_epoch10.py  exp114_vela_epoch10.py  exp115_mirro_epoch11.py  exp116_vela_epoch11.py  exp117_depth_law_eval.py  exp118_mirro_epoch12.py  exp119_vela_epoch12.py  exp120_mirro_100k.py  exp121_vela_epoch13.py  exp122_mirro_epoch13.py  exp123_vela_100k.py  exp124_mirro_epoch14.py  exp125_m4a_core.py  exp126_vela_epoch14.py  exp127_m4a_1b.py  exp128_learning_trend.py  exp129_mirro_epoch15.py  exp130_vela_epoch15.py  exp131_mirro_epoch16.py  exp132_surprise_ceiling.py  exp133_cont_convergence.py  exp134_cont_interpolation.py  exp134_exact_bayes_check.py  exp134_rerun_fresh.py  (+235 more)
geometry_maps/: active-sensing-benefit-wall-v0.json  costly-sensing-wall-v0.json  dyad-session-length-curve-v0.json  identity-ecological-escapability-v0.json
loop/: EFFICIENCY.md  IDEAS.md  LESSONS.md  META.md  METHODOLOGY.md  (+8 more)
(+1261 files in other folders)
