[project]
# Public artifact: active_monkey. Package/import names remain active-loop /
# active_loop for historical compatibility; do not rename casually.
name = "active-loop"
version = "0.1.0"
description = "Toy artificial-life lab for costly traits under ecological pressure"
requires-python = ">=3.11"
dependencies = [
    "numpy>=1.19.5",
    "jax>=0.3.4",
    "jaxlib>=0.3.4",
    "equinox>=0.9",
    "multimethod>=1.11",
    "mctx>=0.0.5",
    "networkx>=3.3",
    "matplotlib>=3.1.3",
]

[dependency-groups]
# pyyaml is OPTIONAL: it is only needed to load .yaml preflight configs
# (ecology/evolvability/config.py falls back to JSON when it is absent, and the
# YAML round-trip test self-skips). It is not a runtime dependency.
dev = ["pytest>=8", "pyyaml>=6"]

[tool.pytest.ini_options]
testpaths = ["tests", "eval"]
markers = ["slow: repo-cloning integration tests with nested subprocesses (deselected by default; run with -m 'slow or not slow')"]
addopts = "-q -m 'not slow'"
