[project]
# Public artifact: active_monkey. Package/import names remain active-loop /
# active_loop for historical compatibility; do not rename casually.
name = "active-loop"
version = "0.1.0"
description = "Toy artificial-life lab for costly traits under ecological pressure"
requires-python = ">=3.11"
dependencies = [
    "numpy>=1.19.5",
    "jax>=0.3.4",
    "jaxlib>=0.3.4",
    "equinox>=0.9",
    "multimethod>=1.11",
    "mctx>=0.0.5",
    "networkx>=3.3",
    "matplotlib>=3.1.3",
    "safetensors>=0.8.0",
    "inferactively-pymdp>=1.0.3",
    "mujoco>=3.9.0",
    "brax>=0.14.2",
    "imageio[ffmpeg]>=2.37.3",
]

[project.scripts]
active-monkey = "active_loop.cli.main:main"
active-monkey-loop = "active_loop.cli.run_loop:main"
active-monkey-pr-loop = "active_loop.cli.run_pr_loop:main"
active-monkey-affect-loop = "active_loop.cli.run_affect_loop:main"
active-monkey-life = "active_loop.cli.run_life:main"
active-monkey-m1 = "active_loop.cli.run_m1:main"
active-monkey-talk = "active_loop.cli.talk:main"
active-monkey-converse = "active_loop.cli.converse:main"
active-monkey-converse-demo = "active_loop.cli.converse_demo:main"
active-monkey-embodied = "embodied.demo:main"
active-monkey-embodied-pop = "embodied.run_population:main"

[dependency-groups]
# pyyaml is OPTIONAL: it is only needed to load .yaml preflight configs
# (ecology/evolvability/config.py falls back to JSON when it is absent, and the
# YAML round-trip test self-skips). It is not a runtime dependency.
dev = ["pytest>=8", "pyyaml>=6"]

[tool.pytest.ini_options]
testpaths = ["tests", "eval"]
markers = ["slow: repo-cloning integration tests with nested subprocesses (deselected by default; run with -m 'slow or not slow')"]
addopts = "-q -m 'not slow'"

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["."]
include = ["active_loop*", "ecology*", "embodied*", "eval*", "experiments*", "meta_monkey*"]
namespaces = true
